--- a/vim.html
+++ b/vim.html
@@ -54,34 +54,50 @@ var cimg = 0;var cwi =150;var che =30;
 </div>
 
         <div id="contents">
-            <h1 id='make_stderr_red'>Make stderr red</h1>
+            <h1 id='essential_vim_plugins'>Essential Vim plugins</h1>
 
-<pre><code>command 2&gt; &gt;(while read line; do echo -e &quot;$(tput setaf 1)$line$(tput sgr0)&quot; &gt;&amp;2; done)</code></pre>
+<pre><code>mkdir -p ~/.vim/autoload ~/.vim/bundle
+curl -Sso ~/.vim/autoload/pathogen.vim https://raw.github.com/tpope/vim-pathogen/master/autoload/pathogen.vim
+cd ~/.vim/bundle/
+git clone https://github.com/vim-scripts/Align.git 
+git clone https://github.com/tpope/vim-sensible.git
+git clone https://github.com/scrooloose/nerdtree.git</code></pre>
 
-<h1 id='bash_configuration'>Bash Configuration</h1>
+<h1 id='essential_vim_config'>Essential Vim config</h1>
 
-<pre><code>cat &gt;&gt; ~/.bashrc &lt;&lt; EOF
-# elephant memory
-export HISTSIZE=100000
+<pre><code>touch ~/.vimrc
+cat &gt;&gt; ~/.vimrc &lt;&lt; EOF
+set nocompatible 
+set autoindent 
+set hidden
 
-# append all commands to the history file, 
-# don&#39;t overwrite it at the start of every new session
-shopt -s histappend
+set expandtab 
+set smarttab 
+set tabstop=8 
+set shiftwidth=4 
+set softtabstop=4
+
+set incsearch 
+set hlsearch
+
+set textwidth=78 
+
+if exists(&#39;+colorcolumn&#39;) 
+   set colorcolumn=+1 
+endif
+
+&quot; Integration
+set clipboard=unnamed,unnamedplus,autoselect
+
+set history=65535
+
+syntax on
 EOF</code></pre>
 
-<h1 id='essential_tools'>Essential tools</h1>
+<h1 id='vim_adding_plugin_with_git_submodules'>Vim: adding plugin with git submodules</h1>
 
-<pre><code>sudo apt-get install -y vim
-sudo apt-get install -y ack-grep
-sudo apt-get install -y bash-completion</code></pre>
-
-<h1 id='automate_user_creation'>Automate user creation</h1>
-
-<pre><code>sudo /usr/sbin/useradd sysop
-echo sysop: | sudo /usr/sbin/chpasswd
-sudo mkdir -p /home/sysop
-sudo chown sysop /home/sysop
-sudo /usr/sbin/usermod -G admin sysop</code></pre>
+<pre><code>cd ~/dot-files
+git submodule add https://github.com/vim-scripts/VST.git .vim/bundle/VST</code></pre>
         </div>
         <!-- Histats.com  START  --> 
 <script async type="text/javascript" language="javascript"> 
