--- a/index.html
+++ b/index.html
@@ -54,43 +54,89 @@ var cimg = 0;var cwi =150;var che =30;
 </div>
 
         <div id="contents">
-            <div class="face">
-    <img border="0" width="214" height="181" src="images/AndreaFrancia.jpg" 
-         alt="Andrea Francia"/>
+            <div class='face'>
+    <img alt='Andrea Francia' border='0' height='181' src='images/AndreaFrancia.jpg' width='214' />
 </div>
+<h1 id='chi_sono'>Chi sono</h1>
 
-<p> Sono un programmatore, pratico eXtreme Programming, sono Ingegnere
-informatico.  Amo Vim, Python, lo sviluppo server, e quello iOS.  </p>
+<p>Sono un programmatore, amo la programmazione e tutto quello che gira attorno allo sviluppo software. Ho cominciato a studiare programmazione da piccolo, a circa 12 anni sul manuale dell&#8217;MSX BASIC, poi ho fatto l&#8217;ITIS (perito programmatore), l&#8217;università (Ingengeria Informatica indirizzo Progettazione), l&#8217;esame di stato (Ingegnere dell&#8217;Informazione) e poi, con l’inizio del lavoro, per mantenermi aggiornato ho cominciato a frequentare le community italiane, quella di Java, quella di Python, e infine la community di chi voleva studiare eXtreme Programming.</p>
 
-<p> Ora lavoro alla <a href="http://www.7pixel.it">7Pixel</a> dove nel team
-Nautilus allo sviluppo del sito <a href="http://www.trovaprezzi.it">
-www.trovaprezzi.it</a> e allo svliuppo applicazione Trovaprezzi per
-Windows 8.  Uso Ruby e C#.  </p>
+<p>Ho lavorato con parecchie aziende, all&#8217;inizio ho cominciato con piccole aziende nella zona di Pavia, poi dopo una brevissima parentesi svizzera, mi sono spostato in provincia di Varese per lavorare con un direttorato generale della Commissione Europea (Joint Research Centre), alla fine sono tornato in zona Pavia e ho trovato lavoro in 7Pixel (una azienda di prodotto). Molta della esperienza pre-7Pixel l’ho fatta nel settore spazio, in particolare nell’osservazione della terra.</p>
 
-<p> Ho lavorato al <a href="http://ec.europa.eu/dgs/jrc/">Joint Research
-Centre</a> della Commissione Europea dove ho lavorato con l'Agenzia
-Spaziale Europea.</p>
+<h1 id='lesperienza_in_7pixel'>L&#8217;esperienza in 7Pixel</h1>
 
-<p> Ho fatto il Tutor all'Universit&agrave; di Pavia insegnando Java, Fortran
-e C.</p>
+<p>Da poco più di due anni (da settembre 2012) lavoro per 7Pixel. All’inizio sono entrato a far parte del Team Nautilus con il quale ho lavorato a diversi progetti: (1) l&#8217;evoluzione di www.trovaprezzi.it, (2) la riscrittura di alcune rotte di www.trovaprezzi.it, (3) la scrittura da zero dell&#8217;app TrovaPrezzi per Windows 8, (4) lo sviluppo di www.trovaprezzideals.it, un e-commerce multi-merchant basato (5) lo sviluppo del backend per l’e-commerce sull’app TrovaPrezzi per Android (anche in questo caso basato su Hybris).</p>
 
-<p> Ho sviluppato il software open source 
-<a href="http://code.google.com/p/trash-cli">trash-cli</a>.  </p>
+<p>Poi da aprile 2014 sono passato al reparto mobile di 7Pixel. Dapprima lavorando con il Team Antani da cui ho ereditato l&#8217;app TrovaPrezzi per iOS, poi fondando un nuovo team che ha preso in carico la stessa app.</p>
+
+<p>Elenco dei prodotti a cui ho lavorato in 7Pixel:</p>
+
+<ul>
+<li>App TrovaPrezzi per iOS: https://itunes.apple.com/app/trovaprezzi/id466443252</li>
+
+<li>TrovaPrezzi http://www.trovaprezzi.it/</li>
+
+<li>TrovaPrezziDeals http://www.trovaprezzideals.it/</li>
+
+<li>App TrovaPrezzi per Windows 8: http://apps.microsoft.com/windows/it-it/app/trovaprezzi/6572bdaa-6136-487c-838a-64cddab8f457</li>
+</ul>
+
+<h1 id='lesperienza_con_il_joint_research_centre'>L&#8217;esperienza con il Joint Research Centre</h1>
+
+<p>Ho lavorato due anni per Joint Reseach Centre, il JRC è un direttorato generale della Commissione Europea, in pratica è il ministero della ricerca della comunità Europea. Li mi sono occupato dell&#8217;evoluzione di un servizio per l&#8217;ortorettificazione di immagini satellitari per il progetto GENESI-DEC.</p>
+
+<h1 id='lesperienza_in_galileian_plus'>L&#8217;esperienza in Galileian Plus</h1>
+
+<p>Per quasi 4 anni ho lavorato per Galileian Plus, da gennaio 2006 a maggio 2010. La Galileian Plus lavorava in ambito spaziale e del posizionamento di precisione. I clienti erano soprattutto enti pubblici o para-pubblici. Tra i clienti c&#8217;erano Telespazio (gruppo Finmeccanica), il dipartimento di scienze della terra dell&#8217;Università di Trieste, e l&#8217;Agenzia Spaziale Italiana, e indirettamente, il dipartimento di protezione civile del Friuli Venzia Giulia.</p>
+
+<p>Galileian Plus era un&#8217;azienda piccola. Un&#8217;azienda piccola è un ottimo posto per imparare un sacco di cose. Non tanto perché ci sia qualcuno che te le insegni ma perché lo devi fare per forza. Data la mia esperienza mi veniva naturale prendermi in carico le responsabilità tecnico/sistemistiche che man mano emergevano. Quindi oltre fare l&#8217;ingegnere software, l&#8217;architetto e il programmatore per i progetti per i clienti intermi; internamente mi occupavo dell&#8217;amministrazione dei sistemi, degli acquisti tecnici, e di aiutare le altri colleghi. Ho anche contribuito al Business Development, lavorando alle risposte ai bandi.</p>
+
+<p>In Galileian Plus ho lavorato su alcuni progetti: (1) NCC per COSMO-SKYMED, grazie al quale ho potuto &#8220;visitare&#8221; Centro di Geodesia Spaziale di Matera; (2) AlpsGPS-QUAKENET per l&#8217;Università di Trieste, durante una missione di questo progetto ho conosciuto mia moglie; (3) il progetto SISMA, con cliente Agenzia Spaziale Italiana.</p>
+
+<h1 id='lesperienza_in_tecnoteam'>L&#8217;esperienza in TecnoTeam</h1>
+
+<p>Per poco più di un&#8217;anno (tredici mesi da dicembre 2004 a dicembre 2005) ho lavorato per la Tecnoteam di Pavia. Lì mi sono occupato di amministrazione di di rete e di sistema per un sacco di clienti. Una cinquantina di installazioni sparse per la lombardia che gestivamo per lo più via rete ma anche andando sul posto.</p>
+
+<h1 id='il_primo_anno_dopo_luniversit'>Il primo anno dopo l&#8217;università</h1>
+
+<p>Il 2004 è stato il mio primo anno di lavoro dopo l&#8217;università, è stata l&#8217;occasione per sbattere il muso contro con la dura realtà del lavoro, imparare i miei limiti. In quell&#8217;annno ho avuto un assaggio di quali potessero i veri problemi nell&#8217;industria del software, di quanto fosse facile perdere un cliente, e del grado di approssimazione con cui venivano condotto il lavoro in certe realtà.</p>
+
+<h1 id='luniversit_e_labilitazione_alla_professione'>L&#8217;università e l&#8217;abilitazione alla professione.</h1>
+
+<p>Ho fatto ingegneria informatica, il vecchio ordinamento, il corso di ingegneria durava 5 anni ed era veramente poca la gente che superava gli esami filtro dei primi anni.</p>
+
+<p>Mi sono laureato nel 2003 in Ingegneria Informatica indirizzo Progettazione. Ho fatto una tesi di intelligenza artificiale sul calcolo evolutivo. Il calcolo evolutivo è un estensione più raffinata degli algoritmi genetici. È stata una tesi lunghissima, un anno di gestazione, dalla quale però ho ottenuto il voto massimo che si può avere per una tesi, a Pavia, cioè 9 punti. Alla fine mi sono laureato con 108/110.</p>
+
+<p>L&#8217;anno successivo ho passato l&#8217;esame di abilitazione alla professione, quindi posso dire di essere Ingegnere dell&#8217;Informazione.</p>
+
+<h1 id='lavori_durante_luniversit'>Lavori durante l&#8217;università</h1>
+
+<p>Durante l&#8217;università ho avuto la fortuna di lavorare come Tutor. Il Tutoraggio prevedeva l&#8217;essere pagati dall&#8217;università per insegnare ai colleghi studenti più giovani a programmare, una cosa che in parte facevo già gratuitamente.</p>
+
+<p>Per tre anni (accademici) ho vinto il contratto da Tutor di &#8220;Fondamenti di Informatica&#8221; e ho lavorato con il prof. Luca Lombardi. Nel primo anno (1998/1999) ho aiutato i miei colleghi ad imparare il linguaggio &#8220;C&#8221;, nel secondo (1999/2000) il Fortran, e nell&#8217;ultimo anno (2000/2001) il linguaggio Java.</p>
+
+<p>Al terzo anno di università ho anche brevemente collaborato con la FMR Consulting di Voghera.</p>
+
+<p>Più avanti io ed un mio collega abbiamo scritto un software di gestione videoteca e l&#8217;abbiamo venduto ad un cliente di Binasco. Ci siamo fatti pagare veramente poco.</p>
+
+<h1 id='lopen_source'>L&#8217;Open Source</h1>
+
+<p>Amo l&#8217;Open Source. È un bellissima occasione per imparare un sacco di cose ed è un ambiente pieno di strumenti di qualità, soprattutto per i programmatori.</p>
+
+<p>Ho contribuito ad una serie di progetti Open Source mandando patch, soprattutto per imparare.</p>
+
+<p>Ho fondato anche uno progetto Open Source, si chiama &#8216;trash-cli&#8217; ed è incluso nella maggior parte delle distribuzioni. Il codice sorgente è su GitHub: https://github.com/andreafrancia/trash-cli</p>
 <div class='contacts'>
     <h2>Contatti</h2>
     <ul>
-        <li><a href="https://twitter.com/andreafrancia">@andreafrancia</a> </li>
-        <li><a href="http://www.slideshare.net/andreafrancia">@slideshare</a></li>
-        <li><a href="https://github.com/andreafrancia">@github</a> </li>
-        <li><a href="http://it.linkedin.com/pub/andrea-francia/8/27b/285">@LinkedIn</a> </li>
+        <li><a href='https://twitter.com/andreafrancia'>@andreafrancia</a> </li>
+        <li><a href='http://www.slideshare.net/andreafrancia'>@slideshare</a></li>
+        <li><a href='https://github.com/andreafrancia'>@github</a> </li>
+        <li><a href='http://it.linkedin.com/pub/andrea-francia/8/27b/285'>@LinkedIn</a> </li>
         <li>Tel: <a href='tel:+39 320 9437233'>+39 320 9437233</a></li>
-        <li>Mail: <a href="mailto:sito@andreafrancia.it">me@andreafrancia.it</a></li>
+        <li>Mail: <a href='mailto:sito@andreafrancia.it'>me@andreafrancia.it</a></li>
     </ul>
 </div>
-
-
-
-
         </div>
         <!-- Histats.com  START  --> 
 <script async type="text/javascript" language="javascript"> 
