--- a/tdd-ios.html
+++ b/tdd-ios.html
@@ -87,7 +87,7 @@ var cimg = 0;var cwi =150;var che =30;
 <li>Giovedì 8 ottobre 2015 a Bologna</li>
 </ul>
 
-<p>Se vuoi essere informato a quando verranno aggiunte altre edizioni manda una mail a: <a href='mailto:tdd-ios@andreafrancia.it?subject=Aggiornamenti Corso TDD&amp;body=Vorrei venir aggiornato sul Corso TDD su iOS.'>tdd-ios@andreafrancia.it</a>.</p>
+<p>Se vuoi essere tenuto informato sulle nuove date del corso manda una mail a: <a href='mailto:tdd-ios@andreafrancia.it?subject=Aggiornamenti Corso TDD&amp;body=Vorrei venir aggiornato sul Corso TDD su iOS.'>tdd-ios@andreafrancia.it</a>.</p>
         </div>
         <!-- Histats.com  START  --> 
 <script async type="text/javascript" language="javascript"> 
