--- a/tdd-ios.html
+++ b/tdd-ios.html
@@ -79,15 +79,22 @@ var cimg = 0;var cwi =150;var che =30;
 <li>Il design incrementale (refactoring)</li>
 </ul>
 
-<p>Il corso è ospitato da Avanscoperta, per quest&#8217;anno (2015) ci sono solo due date:</p>
-
-<ul>
-<li>Lunedì 13 aprile 2015 a Bologna</li>
-
-<li>Giovedì 8 ottobre 2015 a Bologna</li>
-</ul>
-
-<p>Se vuoi essere tenuto informato sulle nuove date del corso manda una mail a: <a href='mailto:tdd-ios@andreafrancia.it?subject=Aggiornamenti Corso TDD&amp;body=Vorrei venir aggiornato sul Corso TDD su iOS.'>tdd-ios@andreafrancia.it</a>.</p>
+<p>Il corso è organizzato in collaborazione con Avanscoperta.</p>
+<!-- Begin MailChimp Signup Form --><link href='//cdn-images.mailchimp.com/embedcode/slim-081711.css' rel='stylesheet' type='text/css' /><style type='text/css'>
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style><div id='mc_embed_signup'>
+<form action='//andreafrancia.us10.list-manage.com/subscribe/post?u=275eb30b607a3a0c6cd9a848f&amp;id=4d751d5316' class='validate' id='mc-embedded-subscribe-form' method='post' name='mc-embedded-subscribe-form' target='_blank'>
+    <div id='mc_embed_signup_scroll'>
+	<label for='mce-EMAIL'>Se vuoi essere informato sul corso iscriviti alla newsletter</label>
+	<input class='email' id='mce-EMAIL' name='EMAIL' placeholder='email address' required='true' type='email' value='' />
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style='position: absolute; left: -5000px;'><input name='b_275eb30b607a3a0c6cd9a848f_4d751d5316' tabindex='-1' type='text' value='' /></div>
+    <div class='clear'><input class='button' id='mc-embedded-subscribe' name='subscribe' type='submit' value='Subscribe' /></div>
+    </div>
+</form>
+</div><!--End mc_embed_signup-->
         </div>
         <!-- Histats.com  START  --> 
 <script async type="text/javascript" language="javascript"> 
