--- a/tdd-ios.html
+++ b/tdd-ios.html
@@ -40,6 +40,25 @@ var cimg = 0;var cwi =150;var che =30;
 </script>
 
 
+        
+          <!-- Facebook Conversion Code for facebook -->
+<script>(function() {
+  var _fbq = window._fbq || (window._fbq = []);
+  if (!_fbq.loaded) {
+    var fbds = document.createElement('script');
+    fbds.async = true;
+    fbds.src = '//connect.facebook.net/en_US/fbds.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(fbds, s);
+    _fbq.loaded = true;
+  }
+})();
+window._fbq = window._fbq || [];
+window._fbq.push(['track', '6023428788789', {'value':'0.01','currency':'USD'}]);
+</script>
+<noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=6023428788789&amp;cd[value]=0.01&amp;cd[currency]=USD&amp;noscript=1" /></noscript>
+
+        
     </head>
     <body>
         <div id='mainnav' class='nav'>
@@ -94,20 +113,7 @@ var cimg = 0;var cwi =150;var che =30;
     <div class='clear'><input class='button' id='mc-embedded-subscribe' name='subscribe' type='submit' value='Subscribe' /></div>
     </div>
 </form>
-</div><!--End mc_embed_signup--><!-- Facebook Conversion Code for facebook --><script>(function() {
-  var _fbq = window._fbq || (window._fbq = []);
-  if (!_fbq.loaded) {
-    var fbds = document.createElement('script');
-    fbds.async = true;
-    fbds.src = '//connect.facebook.net/en_US/fbds.js';
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(fbds, s);
-    _fbq.loaded = true;
-  }
-})();
-window._fbq = window._fbq || [];
-window._fbq.push(['track', '6023428788789', {'value':'0.01','currency':'USD'}]);
-</script><noscript><img alt='' height='1' src='https://www.facebook.com/tr?ev=6023428788789&amp;cd[value]=0.01&amp;cd[currency]=USD&amp;noscript=1' style='display:none' width='1' /></noscript>
+</div><!--End mc_embed_signup-->
         </div>
         <!-- Histats.com  START  --> 
 <script async type="text/javascript" language="javascript"> 
